# Complete-Django-React-JWT-Authentication-System

./: README.md  pyproject.toml
backend/authapi/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/authapi/migrations/: 0001_initial.py  0002_remove_customuser_is_staff.py
backend/backend/: settings.py  urls.py
backend/social_authapi/: apps.py  helpers.py  serializers.py  utils.py  views.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Login.jsx  PasswordResetRequest.jsx  Profile.jsx  Signup.jsx  VerifyEmail.jsx
frontend/src/utils/: AxiosInstance.js
