[tool.poetry]
name = "complete django rest framework jwt authentication system"
version = "0.1.0"
description = ""
authors = ["Takib Yeasar <mdtakibyeasar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
rest-framework-simplejwt = "^0.0.2"
django-cors-headers = "^4.4.0"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
google-api-python-client = "^2.142.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
